# Ring-amo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-dynamic-rings.sh  build-rings.sh  monitor.sh  query-rings.sh  run-benchmark.sh  run-queries-all-ring.sh  run-queries.sh  run-static-queries.sh  test-theta.sh  update-ring.sh
CMakeModules/: CheckSSE.cmake
Queries/: Queries-movies.txt  Queries-test.txt  Queries-wikidata-debug.txt  Queries-wikidata-test.txt  insertJoin.txt  insertJoinTriples.txt
Queries/B-tests/: deleteNode.txt  insertDelete.txt  queries-test.txt
Queries/bgps/: J4.txt
Queries/q-tests/: all-deletes.txt  all-inserts.txt  all-queries.txt  all-updates.txt  q-1.txt  q-10.txt  q-100.txt  q-1000.txt  q-r10.txt  q-r100.txt  q-r1000.txt
Queries/q-tests-static/: q-1.txt  q-10.txt  q-100.txt  q-1000.txt
Queries/updates/: deleteEdge.txt  deleteNode.txt  insert.txt
include/: bv_amo.hpp  bwt.hpp  bwt_dyn.hpp  configuration.hpp  dict_map.hpp  dict_map_avl.hpp  ltj_algorithm.hpp  pfc.hpp  ring.hpp
include/bitvector_amortized/: basics.hpp  dynamic.hpp  hybrid.hpp  leaf.hpp  static.hpp
src/: build-index.cpp  delete-edge.cpp  delete-node.cpp  insert-edge.cpp  query-index.cpp  test-B.cpp  test-amortized-bitvector.cpp  test-dict-map-avl.cpp  test-queries.cpp  test-ring.cpp  update-query.cpp
src/bitvector_amortized/: dynamic.cpp  hybrid.cpp  leaf.cpp  static.cpp  test-amortized-bitvector.cpp  test.cpp
